# UnityPluginTemplate

./: README.md
plugins/: CMakeLists.txt
plugins/plugin00/: CMakeLists.txt  Plugin00.cs  plugin00.cpp  plugin00.h
plugins/plugin01/: CMakeLists.txt  Plugin01.cs  plugin01.cpp  plugin01.h
plugins/unit_tests/: CMakeLists.txt  tests.cs
