cmake_minimum_required(VERSION 3.18)

set(PROJECT_NAME plugin01)
project(${PROJECT_NAME} LANGUAGES CXX)

set(HEADERS "plugin01.h")
set(SOURCES "plugin01.cpp;Plugin01.cs")

source_group("include" FILES ${HEADERS})
source_group("src" FILES ${SOURCES})

add_library(${PROJECT_NAME} SHARED ${HEADERS} ${SOURCES})

set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_NAME_DEBUG "${PROJECT_NAME}d" OUTPUT_NAME_RELEASE "${PROJECT_NAME}")

install(TARGETS ${PROJECT_NAME} CONFIGURATIONS Debug  RUNTIME DESTINATION ${INSTALL_DIRECTORY})
install(TARGETS ${PROJECT_NAME} CONFIGURATIONS Release RUNTIME DESTINATION ${INSTALL_DIRECTORY})
install(FILES $<TARGET_PDB_FILE:${PROJECT_NAME}> DESTINATION ${INSTALL_DIRECTORY} OPTIONAL)
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/Plugin01.cs ${INSTALL_DIRECTORY})

